# dcpy

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  README.org  __init__.py  eos.py  fits.py  oceans.py  plots.py  pyproject.toml  setup.cfg  setup.py  ts.py  util.py
dcpy/: __init__.py  dask.py  datatree.py  eos.py  explode.py  facetgrid.py  finestructure.py  fits.py  interpolate.py  interpolators.py  library.py  oceans.py  plots.py  ts.py  util.py  xr_accessor.py
dcpy/tests/: test_dcpy.py  test_eos.py  test_interpolate.py
plots/: cmapj.py
tests/: test_dcpy.py
