[metadata]
name = dcpy
author = Deepak Cherian
author_email = deepak@cherian.net
license = Apache

url = https://github.com/dcherian/dcpy
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[wheel]
universal = 1

[tool:pytest]
python_files=test_*.py
testpaths=tests

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc
    cmapj.py
    __init__.py

[aliases]
test = pytest
